test/files/neg/t3006.check
t3006.scala:8: error: type mismatch;
 found   : String("H")
 required: Int
  println(A(3) + "H")
                 ^
1 error
